    floor,ceiling,truncate
  * Default to debug mode on hppa to work around gcc compiler
    optimization bugs
  * Add missing m4 and automake files in binutils directory to enable
    automake and autoconf here
  * Add mach-o specific files from cvs head to local bfd tree
  * Add bfd/po makefiles
  * Macosx defaults in configure.in
  * bfd make and configure file changes to handle mach-o backend

 -- Camm Maguire <camm@enhanced.com>  Wed, 25 Feb 2004 22:39:01 +0000

gcl (2.6.1-25) unstable; urgency=low

  * rl_putc_em a carriage return after invoking readline to ensure the
    prompt in rl_putc_em_line is cleared.
  * use standard sgc fault recovery element for hppa as recommended by
    hppa kernel experts
  * Store banner in si::*system-banner* for possible modification
  in compatibly licensed programs
  * exit with -1 when standard in ends in lisp debug mode
  * Backport macosx files from cvs HEAD
  * Document system return codes

 -- Camm Maguire <camm@enhanced.com>  Fri, 13 Feb 2004 20:44:54 +0000

gcl (2.6.1-24) unstable; urgency=low

  * Revert unixport/makefile link order fix for windows, breaks
    compiler::link, find another way
  * runtime SGC fault recovery test
  * Protect read/fread in case SGC is enabled with safe (restartable)
    versions
  * SGC on for arm and hppa
  * remove fast-link workaround now fixed for windows
  * Backport HEAD makefile changes to clean .{c,h,data} files and
    new_decl.h, remove said from repository (generated files)

 -- Camm Maguire <camm@enhanced.com>  Thu, 12 Feb 2004 05:56:29 +0000

gcl (2.6.1-23) unstable; urgency=low

  * Remove calls to init-readline with new automatic readline setup

 -- Camm Maguire <camm@enhanced.com>  Tue, 27 Jan 2004 20:27:20 +0000

gcl (2.6.1-22) unstable; urgency=low

  * Build depend on emacs21 | emacsen

 -- Camm Maguire <camm@enhanced.com>  Fri, 23 Jan 2004 22:01:15 +0000

gcl (2.6.1-21) unstable; urgency=low

  * Automatic readline initialization
  * Add watch file