@@ -1,6 +1,8 @@
 
 (IN-PACKAGE "SYSTEM") 
 (PROCLAIM
+    '(FTYPE (FUNCTION () T) DEFAULT-SYSTEM-BANNER LISP-IMPLEMENTATION-VERSION))
+(PROCLAIM
     '(FTYPE (FUNCTION (T) FIXNUM) INSTREAM-LINE S-DATA-LENGTH
             S-DATA-SIZE THE-START)) 
 (PROCLAIM '(FTYPE (FUNCTION (T) (VALUES T T)) LISP::MAKE-KEYWORD)) 
@@ -24,6 +26,7 @@
 (PROCLAIM '(FTYPE (FUNCTION (T T T T T T T) *) TRACE-CALL)) 
 (PROCLAIM
     '(FTYPE (FUNCTION (T T T) T) ANSI-LOOP::LOOP-STANDARD-EXPANSION
+	    WARN-VERSION
             ANSI-LOOP::LOOP-SUM-COLLECTION DEPOSIT-FIELD
             ANSI-LOOP::PRINT-LOOP-UNIVERSE CHECK-TRACE-ARGS
             MAKE-BREAK-POINT ANSI-LOOP::LOOP-ANSI-FOR-EQUALS DPB
@@ -228,7 +231,7 @@
 (PROCLAIM '(FTYPE (FUNCTION (STRING *) *) GET-COMMAND-ARG)) 
 (PROCLAIM
     '(FTYPE (FUNCTION (T *) T) FILE-SEARCH WARN DELETE-DUPLICATES
-            WARN-VERSION NTH-STACK-FRAME UPGRADED-ARRAY-ELEMENT-TYPE
+            NTH-STACK-FRAME UPGRADED-ARRAY-ELEMENT-TYPE
             SLOOP::LOOP-ADD-TEMPS SLOOP::ADD-FROM-DATA MAKE-ARRAY
             ANSI-LOOP::LOOP-WARN BIT INFO-SEARCH LIST-MATCHES
             ARRAY-IN-BOUNDS-P ARRAY-ROW-MAJOR-INDEX REMOVE-DUPLICATES
